feat(eval,chat,mcp,ci): add compare workflow and MCP arg schemas
Add hybrid AB compare GitHub Actions workflow plus scripts/docs for comparing eval runs.
Introduce MCP tool argument JSON Schemas (echo/ping) with pre-call validation in SSE and eval real-tool paths, including tests.

Made-with: Cursor